[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flash-TopkKldiv"
version = "0.1.0"
description = "Triton kernels for sparse operations in KL divergence computation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "triton>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["benchmark.py"]
